src/objects/Clan_Member_Session__c.object
<CustomObject>
    <fields>
        <fullName>Clan__c</fullName>
        <label>Clan</label>
        <referenceTo>Clan__c</referenceTo>
        <relationshipLabel>Clan Member Sessions</relationshipLabel>
        <relationshipName>Clan_Member_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Time_End__c</fullName>
        <label>Date End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Start__c</fullName>
        <label>Date Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Player_Name__c</fullName>
        <formula>Player__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Clan Member Sessions</relationshipLabel>
        <relationshipName>Clan_Member_Sessions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Clan Member Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Player_Name__c</columns>
        <columns>Date_Time_Start__c</columns>
        <columns>Date_Time_End__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMS-{000000}</displayFormat>
        <label>Clan Member Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan Member Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>